@@ -531,12 +531,8 @@ xmlrpc {
 # Required tokens:
 #  usethread - Dies muss enabled werden somit threads funktionieren
 #
-# Optional tokens:
-#  threadcount   - Anzahl der maximum threads (funzt noch nicht...)
-#
 
 threading {
         #usethread;
-        #threadcount 1;
 };
 
