@@ -681,11 +681,7 @@ xmlrpc {
 # Required tokens:
 #  usethread - You must set this for threading to work
 #
-# Optional tokens:
-#  threadcount   - Amount of threads to use (not working, do NOT use)
-#
 
 threading {
         #usethread;
-        #threadcount 1;
 };
